--- a/TheSquatRack/src/components/chatBox/ChatBoxHeader.css
+++ b/TheSquatRack/src/components/chatBox/ChatBoxHeader.css
@@ -29,3 +29,20 @@
     color: var(--color-text-muted);
 }
 
+.typing {
+    animation: fadeInOut 2s ease-in-out infinite;
+}
+
+@keyframes fadeInOut {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
