--- a/TheSquatRack/src/components/chatBox/ChatBox.css
+++ b/TheSquatRack/src/components/chatBox/ChatBox.css
@@ -6,12 +6,12 @@
     left: 260px;
     z-index: 3;
     width: 500px;
-    min-height: 0;
-    max-height: 70vh;
+    min-height: 500px;
+    max-height: 65%;
     border: 1px solid var(--color-border-dark);
     border-radius: 10px;
     background-color: var(--color-bg);
-    box-shadow: 0 0 20px 20px var(--color-shadow);
+    /* box-shadow: 0 0 20px 20px var(--color-shadow); */
     opacity: 100%;
 }
 
