--- a/TheSquatRack/src/components/chatBox/ChatBoxInput.css
+++ b/TheSquatRack/src/components/chatBox/ChatBoxInput.css
@@ -1,9 +1,13 @@
 .chatBoxInputRoot{
     display: grid;
+    grid-template-columns: 1fr 60px;
+    margin-left: var(--space-5);
+    margin-bottom: var(--space-5);
 }
 
 .chatBoxInput {
     all: unset;
+    display: flex;
     white-space: pre-wrap;
     overflow-wrap: break-word;
     word-break: break-word;
@@ -11,9 +15,33 @@
     overflow: hidden;
     font-size: var(--small-font-size-1);
     color: var(--color-text-bright);
-    margin-left: var(--space-5);
-    margin-right: var(--space-5);
-    margin-bottom: var(--space-5);
-    padding: var(--space-5);
-    border-bottom: 1px solid var(--color-text-dark);
+    border: 1px solid  var(--color-border-dark);
+    border-radius: 10px;
+    padding-top: var(--space-2);
+    padding-left: var(--space-2);
+    padding-right: var(--space-2);
+}
+
+.sendChatText {
+    all: unset;
+    display: flex;
+    cursor: pointer;
+    justify-content: baseline;
+    align-content: center;
+}
+
+.sendChatText svg {
+    opacity: var(--dimmed);
+    width: var(--icon-size-medium);
+    color: var(--color-text-muted);
+}
+
+.highlighted svg{
+    opacity: var(--filled);
+    color: var(--color-online-indicator);
+}
+
+.sendChatText svg:hover{
+    opacity: var(--filled);
+    color: var(--color-online-indicator);
 }
