imporoved typing... notifications

--- a/TheSquatRack/src/components/chatBox/ChatBox.css
+++ b/TheSquatRack/src/components/chatBox/ChatBox.css
@@ -11,7 +11,7 @@
     border: 1px solid var(--color-border-dark);
     border-radius: 10px;
     background-color: var(--color-bg);
-    /* box-shadow: 0 0 20px 20px var(--color-shadow); */
+    box-shadow: 5px 10px 10px 5px var(--color-shadow);
     opacity: 100%;
 }
 
