--- a/TheSquatRack/src/components/chatBox/ChatBoxMain.css
+++ b/TheSquatRack/src/components/chatBox/ChatBoxMain.css
@@ -7,9 +7,10 @@
     border-radius: 0px;
     min-height: 0;
     overflow-y: auto;
-    margin: var(--space-5);
-    padding: var(--space-2);
-    }
+    margin-left: var(--space-5);
+    margin-right: var(--space-5);
+    margin-bottom: var(--space-5);
+}
 
 .emptyChat {
     color: var(--color-text-muted);
@@ -17,5 +18,10 @@
 }
 
 .chatMsgProfilePic svg{
+    width: var(--icon-size-small);
+}
+
+.typingIconInChat svg {
+    color: var(--color-online-indicator);
     width: var(--icon-size-small);
 }
