--- a/TheSquatRack/src/components/calendar/Day.css
+++ b/TheSquatRack/src/components/calendar/Day.css
@@ -8,6 +8,7 @@
     border: solid 1px var(--color-border-dark);
     border-radius: 10px;
     cursor: pointer;
+    /* box-shadow: 0px 0px 2px 2px var(--color-shadow); */
 }
 
 .dayContainer.otherMonth {
