--- a/TheSquatRack/src/components/chatBox/ChatBox.css
+++ b/TheSquatRack/src/components/chatBox/ChatBox.css
@@ -10,8 +10,8 @@
     max-height: 65%;
     border: 1px solid var(--color-border-dark);
     border-radius: 10px;
-    background-color: var(--color-bg);
-    box-shadow: 5px 10px 10px 5px var(--color-shadow);
-    opacity: 100%;
+    background-color: var(--color-chat-bg);
+    /* box-shadow: 0px 0px 10px 10px var(--color-shadow); */
+    opacity: 90%;
 }
 
