--- a/TheSquatRack/src/components/chatBox/ChatBox.css
+++ b/TheSquatRack/src/components/chatBox/ChatBox.css
@@ -2,16 +2,15 @@
     display: flex;
     flex-direction: column;
     position: fixed;
-    top: 170px;
-    left: 260px;
+    top: 180px;
+    left: 270px;
     z-index: 3;
-    width: 500px;
-    min-height: 500px;
-    max-height: 65%;
+    width: calc(700px * var(--ui-scale));
+    max-height: 70%;
     border: 1px solid var(--color-border-dark);
     border-radius: 10px;
     background-color: var(--color-chat-bg);
-    /* box-shadow: 0px 0px 10px 10px var(--color-shadow); */
-    opacity: 90%;
+    box-shadow: 0px 0px 10px 10px var(--color-shadow);
+    opacity: 100%;
 }
 
