--- a/TheSquatRack/src/components/header/ProfileIcon.css
+++ b/TheSquatRack/src/components/header/ProfileIcon.css
@@ -1,21 +1,9 @@
 .profileIcon {
     all: unset;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    grid-column: 8;
+    grid-column: 7;
     cursor: pointer;
-}
-
-.profileIcon svg {
-    align-self: center;
-    width: var(--icon-size-medium);
-    color: var(--color-text-muted);
-    opacity: var(--dimmed);
-}
-
-.profileIcon svg:hover {
-    opacity: var(--filled);
 }
 
 .headerUsername{
@@ -23,4 +11,15 @@
     justify-content: center;
     font-size: var(--xsmall-font-size);
     color: var(--color-text-muted);
+}
+
+.profileIcon svg {
+    width: 100%;
+    height: 100%;
+    color: var(--color-text-muted);
+    opacity: var(--dimmed);
+}
+
+.profileIcon svg:hover {
+    opacity: var(--filled);
 }
