--- a/TheSquatRack/src/components/profile/ProfilePic.css
+++ b/TheSquatRack/src/components/profile/ProfilePic.css
@@ -1,6 +1,18 @@
 .profilePicRoot {
+    all: unset;
     display: flex;
     border: 1px solid var(--color-border-dark);
     border-radius: 10px;
     height: 250px;
+    width: 250px;
+    overflow: hidden;
+    cursor: pointer;
+    /* box-shadow: 0px 0px 10px 5px rgb(0,0,0,0.25); */
+}
+
+.profilePicRoot img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
