--- a/TheSquatRack/src/components/userList/UserRow.css
+++ b/TheSquatRack/src/components/userList/UserRow.css
@@ -6,7 +6,7 @@
     border-radius: 10px;
     padding: var(--space-2);
     opacity: var(--filled);
-    gap: var(--space-1);
+    gap: var(--space-4);
 }
 
 .userRow:hover {
@@ -14,14 +14,15 @@
     opacity: var(--dimmed);
 }
 
-.userProfilePicInList{
+.userProfilePicInList {
     display: flex;
     grid-column: 1;
     justify-content: center;
 }
 
 .userProfilePicInList svg {
-    width: var(--icon-size-medium);
+    width: 100%;
+    height: 100%;
     color: var(--color-text-muted);
 }
 
