--- a/TheSquatRack/src/components/chatBox/ChatBoxMessage.css
+++ b/TheSquatRack/src/components/chatBox/ChatBoxMessage.css
@@ -25,6 +25,21 @@
     color: var(--color-text-muted);
 }
 
+.chatMsgProfilePic{
+    grid-column: 2;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    text-align: right;
+}
+
+.otherProfilePic{
+    grid-column: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+}
+
 .selfChatter {
     grid-column: 2;
     display: flex;
