--- a/TheSquatRack/src/components/profile/Avatar.css
+++ b/TheSquatRack/src/components/profile/Avatar.css
@@ -4,6 +4,7 @@
     overflow: hidden;
     align-self: center;
     justify-content: center;
+    border: 1px solid var(--color-border-dark);
 }
 
 .avatar img {
@@ -18,6 +19,13 @@
     opacity: var(--dimmed);
 }
 
-.avatar svg {
-    
+.defaultAvatar {
+    display: flex;
+    align-self: center;
+    justify-content: center;
+}
+
+.defaultAvatar svg {
+    height: 100%;
+    width: 100%;
 }
