--- a/TheSquatRack/src/index.css
+++ b/TheSquatRack/src/index.css
@@ -44,7 +44,7 @@
   --color-rpe: #A6A09B;
   --color-chat-bg:#141414;;
 
-  --color-shadow:rgb(0, 0, 0, .01);
+  --color-shadow:rgb(0, 0, 0, .25);
 
   --color-squat-indicator: #4f74c9;
   --color-bench-indicator: #7fbf3f;
@@ -98,8 +98,8 @@
   --color-prHistory-icon: #616161;
   --color-online-indicator: #81C784;
   --color-offline-indicator: #e60076;
-  --color-shadow: rgb(0, 0, 0, 0.01);
-  --color-chat-bg: #f5f5f5;
+  --color-shadow: rgb(0, 0, 0, 0.02);
+  --color-chat-bg: #ffffff;
 
 }
 
