--- a/TheSquatRack/src/components/exerciseSelection/ExerciseSelectionRoot.css
+++ b/TheSquatRack/src/components/exerciseSelection/ExerciseSelectionRoot.css
@@ -6,6 +6,6 @@
     right: 0;
     z-index: 2;
     min-width: calc(1000px * var(--ui-scale));
-    background-color: var(--color-bg);
+    background-color: var(--color-hover);
     border-bottom: 1px solid var(--color-border-dark);
 }
