--- a/TheSquatRack/src/components/chatBox/ChatBox.css
+++ b/TheSquatRack/src/components/chatBox/ChatBox.css
@@ -10,7 +10,19 @@
     border: 1px solid var(--color-border-dark);
     border-radius: 10px;
     background-color: var(--color-chat-bg);
-    box-shadow: 0px 0px 10px 5px var(--color-shadow);
+    /* box-shadow: 0px 0px 10px 5px var(--color-shadow); */
     opacity: 98%;
+}
+
+.docked {
+    position:relative;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    width: calc(1000px * var(--ui-scale));
+    min-width: calc(900px * var(--ui-scale));
+    margin-inline: auto;
+    max-height: 500px;
+    margin-top: calc(100px * var(--ui-scale));
 }
 
