--- a/TheSquatRack/src/components/chatBox/ChatBoxMessage.css
+++ b/TheSquatRack/src/components/chatBox/ChatBoxMessage.css
@@ -20,24 +20,9 @@
 .otherChatter {
     grid-column: 1;
     display: flex;
-    flex-direction: row;
     justify-content: left;
+    gap: var(--space-2);
     color: var(--color-text-muted);
-}
-
-.chatMsgProfilePic{
-    grid-column: 2;
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-    text-align: right;
-}
-
-.otherProfilePic{
-    grid-column: 1;
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
 }
 
 .selfChatter {
@@ -46,6 +31,7 @@
     flex-direction: row;
     justify-content: right;
     text-align: right;
+    gap: var(--space-2);
     color: var(--color-text-muted);
 }
 
@@ -60,4 +46,9 @@
 
 .lastMsg {
     color: var(--color-text-bright);
+}
+
+.avatar {
+    min-width: 40px;
+    align-self: end;
 }
