--- a/TheSquatRack/src/index.css
+++ b/TheSquatRack/src/index.css
@@ -43,9 +43,8 @@
   --color-today-date: #ffffff;
   --color-rpe: #A6A09B;
   --color-chat-bg:#0c0a09;
-  --color-avatar-online: rgba(0, 0, 200, 0.55);
-
-  --color-avatar-online: 0px 0px 45px 0px rgba(76, 107, 175, 0.2);
+  --color-shadow: rgb(0, 0, 0, 0.2);
+  --color-avatar-online: 0px 0px 25px 1px rgba(76,175,80, 0.1);
 
   --color-squat-indicator: #4f74c9;
   --color-bench-indicator: #7fbf3f;
@@ -101,7 +100,7 @@
   --color-offline-indicator: #e60076;
   --color-shadow: rgb(0, 0, 0, 0.02);
   --color-chat-bg: #ffffff;
-  --color-avatar-online: 0px 0px 0px 1px rgba(0, 100, 255, 0.2);
+  --color-avatar-online: 0px 0px 0px 0px rgba(76, 175, 80, 0.3);
 
 }
 
