--- a/TheSquatRack/src/components/userList/UserRow.css
+++ b/TheSquatRack/src/components/userList/UserRow.css
@@ -80,8 +80,9 @@
     left: 5px;
     top:  6px;
     color: white;
-    background-color: rgb(255, 255,255, 0.5);
+    background-color: rgb(0, 0,0, 0.5);
     border-radius: 10px;
+    box-shadow: 0px 0px 5px 1px rgb(0,0,0,0.3);
 }
 
 .addToGroupChat svg {
