--- a/TheSquatRack/src/components/chatBox/ChatBox.css
+++ b/TheSquatRack/src/components/chatBox/ChatBox.css
@@ -9,7 +9,7 @@
     max-height: 70%;
     border: 1px solid var(--color-border-dark);
     border-radius: 10px;
-    background-color: var(--color-chat-bg);
+    background-color: var(--color-bg);
     /* box-shadow: 0px 0px 10px 5px var(--color-shadow); */
     opacity: 98%;
 }
