--- a/TheSquatRack/src/components/groupChatList/GroupChatRow.css
+++ b/TheSquatRack/src/components/groupChatList/GroupChatRow.css
@@ -4,9 +4,8 @@
     display: flex;
     flex-direction: column;
     cursor: pointer;
-    border-radius: 10px;
     opacity: var(--filled);
-    border: 1px solid var(--color-border-dark);
+    border-radius: 10px;
     gap: var(--space-5);
     padding: var(--space-5);
 }
@@ -27,9 +26,10 @@
 
 
 .gcRowUserGrid {
-
-    display: grid;
-    gap: var(--space-1);
-    grid-template-columns: repeat(4, 1fr);
+    display: flex;
+    gap: var(--space-2);
+    border-radius: 10px;
+    border: 1px solid var(--color-border-dark);
+    padding: var(--space-2);
 }
 
