--- a/TheSquatRack/src/components/chatBox/ChatBoxMain.css
+++ b/TheSquatRack/src/components/chatBox/ChatBoxMain.css
@@ -1,4 +1,5 @@
 .chatBoxMainRoot {
+
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -7,10 +8,11 @@
     border-radius: 0px;
     min-height: 0;
     overflow-y: auto;
-    margin-left: var(--space-5);
-    margin-right: var(--space-5);
-    margin-bottom: var(--space-5);
+    padding-top: var(--space-5);
+    padding-bottom: var(--space-5);
+    margin: var(--space-5);
     padding-right: var(--space-4);
+
 }
 
 .emptyChat {
