--- a/TheSquatRack/src/components/chatBox/ChatBox.css
+++ b/TheSquatRack/src/components/chatBox/ChatBox.css
@@ -10,7 +10,7 @@
     border: 1px solid var(--color-border-dark);
     border-radius: 10px;
     background-color: var(--color-bg);
-    /* box-shadow: 0px 0px 10px 5px var(--color-shadow); */
+    box-shadow: 0px 0px 10px 5px var(--color-shadow);
     opacity: 98%;
 }
 
@@ -22,7 +22,8 @@
     width: calc(1000px * var(--ui-scale));
     min-width: calc(900px * var(--ui-scale));
     margin-inline: auto;
-    max-height: 500px;
+    max-height: 1000px;
     margin-top: calc(100px * var(--ui-scale));
+    box-shadow: 0px 0px 0px 0px rgb(0,0,0,0);
 }
 
