--- a/TheSquatRack/src/components/chatBox/ChatBoxInput.css
+++ b/TheSquatRack/src/components/chatBox/ChatBoxInput.css
@@ -15,8 +15,9 @@
     overflow: hidden;
     font-size: var(--small-font-size-1);
     color: var(--color-text-bright);
+    border: 1px solid var(--color-border-dark);
     border-radius: 10px;
-    padding-top: var(--space-2);
+    padding-top: var(--space-4);
     padding-left: var(--space-2);
     padding-right: var(--space-2);
 }
