--- a/TheSquatRack/src/components/chatBox/GroupChatBox.css
+++ b/TheSquatRack/src/components/chatBox/GroupChatBox.css
@@ -3,14 +3,14 @@
     flex-direction: column;
     position: fixed;
     top: 180px;
-    right: 20px;
+    left: 370px;
     z-index: 3;
     width: calc(700px * var(--ui-scale));
     max-height: 70%;
     border: 1px solid var(--color-border-dark);
     border-radius: 10px;
     background-color: var(--color-bg);
-    /* box-shadow: 0px 0px 10px 5px var(--color-shadow); */
+    box-shadow: 0px 0px 10px 5px var(--color-shadow);
     opacity: 98%;
 }
 
@@ -22,6 +22,7 @@
     width: calc(1000px * var(--ui-scale));
     min-width: calc(900px * var(--ui-scale));
     margin-inline: auto;
-    max-height: 500px;
+    max-height: 1000px;
     margin-top: calc(100px * var(--ui-scale));
+    box-shadow: 0px 0px 0px 0px rgb(0, 0,0,0);
 }
