--- a/TheSquatRack/src/components/groupChatList/GroupChatList.css
+++ b/TheSquatRack/src/components/groupChatList/GroupChatList.css
@@ -1,16 +1,29 @@
 .gcListRoot {
 
     display: grid;
-    justify-content: center;
     gap: var(--space-4);
+    border-top: 1px solid var(--color-border-dark);
+    max-height: 40vh;
+    overflow: hidden;
+    overflow-y: auto;
+    padding-bottom: var(--space-4);
 
+}
+
+.gcListRoot {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.gcListRoot::-webkit-scrollbar {
+    display: none;
 }
 
 .gcThreshold {
-
     display: flex;
-    justify-content: center;
     margin-top: var(--space-5);
+    justify-content: center;
     font-size: var(--24px);
 
 }
+
