--- a/TheSquatRack/src/components/groupChatList/GroupChatRow.css
+++ b/TheSquatRack/src/components/groupChatList/GroupChatRow.css
@@ -1,4 +1,5 @@
 .groupChatRowRoot {
+    
     all: unset;
     position:relative;
     display: flex;
@@ -6,9 +7,11 @@
     cursor: pointer;
     opacity: var(--filled);
     border-radius: 10px;
-    gap: var(--space-5);
-    padding: var(--space-5);
+    align-items: baseline;
+    gap: var(--space-2);
+    padding: var(--space-2);
 }
+
 
 .groupChatRowRoot:hover {
 
@@ -24,12 +27,13 @@
 
 }
 
-
 .gcRowUserGrid {
+
     display: flex;
+    width: fit-content;
     gap: var(--space-2);
-    border-radius: 10px;
-    border: 1px solid var(--color-border-dark);
     padding: var(--space-2);
+    border: 1px solid var(--color-border-dark);
+    border-radius: 10px;
 }
 
