--- a/TheSquatRack/src/components/userList/UserList.css
+++ b/TheSquatRack/src/components/userList/UserList.css
@@ -1,5 +1,10 @@
 .userListRoot {
-    display: grid;
-    justify-content: center;
-    gap: var(--space-4);
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-1);
+    padding-bottom: var(--space-5);
+    max-height: 50vh;
+    overflow: hidden;
+    overflow-y: auto;
+    
 }
