--- a/TheSquatRack/src/components/chatBox/ChatBoxHeader.css
+++ b/TheSquatRack/src/components/chatBox/ChatBoxHeader.css
@@ -4,16 +4,18 @@
     gap: var(--space-2);
     height: fit-content;
     margin: var(--space-5);
+    overflow: hidden;
+    overflow-x: scroll;
 }
 
 .profilePicChatBoxHeader {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     justify-self: center;
     cursor: pointer;
 }
 
 .profilePicChatBoxHeader svg {
-    width: var(--icon-size-large);
     color: var(--color-text-muted);
 }
 
@@ -32,7 +34,6 @@
     padding: var(--space-2);
     color: var(--color-text-muted);
 }
-
 
 .chatTitle{
     
