--- a/TheSquatRack/src/components/chatBox/ChatBoxInput.css
+++ b/TheSquatRack/src/components/chatBox/ChatBoxInput.css
@@ -22,6 +22,10 @@
     padding-right: var(--space-2);
 }
 
+.chatBoxInput:active {
+    background-color: var(--color-hover);
+}
+
 .sendChatText {
     all: unset;
     display: flex;
