--- a/TheSquatRack/src/components/chatBox/ChatBoxMain.css
+++ b/TheSquatRack/src/components/chatBox/ChatBoxMain.css
@@ -3,15 +3,14 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    border-top: 1px solid var(--color-border-dark);
-    border-bottom: 1px solid var(--color-border-dark);
-    border-radius: 0px;
+    border: 1px solid var(--color-border-dark);
+    border-radius: 10px;
     min-height: 0;
     overflow-y: auto;
     padding-top: var(--space-5);
     padding-bottom: var(--space-5);
     margin: var(--space-5);
-    padding-right: var(--space-4);
+    padding: var(--space-4);
 
 }
 
