--- a/TheSquatRack/src/components/groupChatList/GroupChatList.css
+++ b/TheSquatRack/src/components/groupChatList/GroupChatList.css
@@ -1,13 +1,14 @@
 .gcListRoot {
 
-    display: grid;
+    display: flex;
+    flex-direction: column;
     gap: var(--space-4);
-    border-top: 1px solid var(--color-border-dark);
     max-height: 40vh;
+    max-width: 300px;
     overflow: hidden;
     overflow-y: auto;
     padding-bottom: var(--space-4);
-
+    border-bottom: 1px solid var(--color-border-dark);
 }
 
 .gcListRoot {
@@ -20,6 +21,11 @@
 }
 
 .gcThreshold {
+
+    border-top: 1px solid var(--color-border-dark);
+    border-bottom: 1px solid var(--color-border-dark);
+    padding-top: var(--space-5);
+    padding-bottom: var(--space-5);
     display: flex;
     margin-top: var(--space-5);
     justify-content: center;
