--- a/TheSquatRack/src/components/groupChatList/GroupChatRow.css
+++ b/TheSquatRack/src/components/groupChatList/GroupChatRow.css
@@ -1,5 +1,5 @@
 .groupChatRowRoot {
-    
+
     all: unset;
     position:relative;
     display: flex;
@@ -10,6 +10,7 @@
     align-items: baseline;
     gap: var(--space-2);
     padding: var(--space-2);
+    width: fit-content;
 }
 
 
@@ -29,11 +30,14 @@
 
 .gcRowUserGrid {
 
-    display: flex;
-    width: fit-content;
+    display: grid;
+    grid-template-columns: repeat(
+        auto-fit,
+        minmax(40px, 1fr)
+    );
+    max-width: calc(6 * 40px);
     gap: var(--space-2);
     padding: var(--space-2);
     border: 1px solid var(--color-border-dark);
     border-radius: 10px;
 }
-
