--- a/TheSquatRack/src/components/chatBox/ChatBoxInput.css
+++ b/TheSquatRack/src/components/chatBox/ChatBoxInput.css
@@ -17,9 +17,10 @@
     color: var(--color-text-bright);
     border: 1px solid var(--color-border-dark);
     border-radius: 10px;
-    padding-top: var(--space-4);
-    padding-left: var(--space-2);
+    padding-left: var(--space-5);
     padding-right: var(--space-2);
+    height: 60px;
+    line-height: 60px;
 }
 
 .chatBoxInput:active {
