--- a/TheSquatRack/src/components/groupChatList/GroupChatRow.css
+++ b/TheSquatRack/src/components/groupChatList/GroupChatRow.css
@@ -7,37 +7,39 @@
     cursor: pointer;
     opacity: var(--filled);
     border-radius: 10px;
-    align-items: baseline;
-    gap: var(--space-2);
-    padding: var(--space-2);
     width: fit-content;
-}
-
-
-.groupChatRowRoot:hover {
-
-    background-color: var(--color-hover);
-
+    height: 165px;
+    width: 100%;
 }
 
 .gcRowTitle {
 
     display: flex;
     justify-content: center;
+    padding: var(--space-2);
     font-size: var(--small-font-size);
-
+ 
 }
 
 .gcRowUserGrid {
 
     display: grid;
-    grid-template-columns: repeat(
-        auto-fit,
-        minmax(40px, 1fr)
-    );
-    max-width: calc(6 * 40px);
-    gap: var(--space-2);
-    padding: var(--space-2);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+
     border: 1px solid var(--color-border-dark);
     border-radius: 10px;
+
+    padding: var(--space-2);
+    gap: 2px;
+
+    overflow: hidden;
+    overflow-y: scroll;
+
 }
+
+.gcRowUserGrid:hover {
+    background-color: var(--color-hover);
+}
+
+
