--- a/TheSquatRack/src/components/chatBox/GroupChatBox.css
+++ b/TheSquatRack/src/components/chatBox/GroupChatBox.css
@@ -2,12 +2,13 @@
 
     display: flex;
     flex-direction: column;
+    align-content: center;
     position: fixed;
     top: 180px;
     left: 370px;
     z-index: 3;
     width: calc(700px * var(--ui-scale));
-    max-height: 70%;
+    max-height: 80vh;
     border: 1px solid var(--color-border-dark);
     border-radius: 10px;
     background-color: var(--color-bg);
