--- a/TheSquatRack/src/components/chatBox/ChatBoxHeader.css
+++ b/TheSquatRack/src/components/chatBox/ChatBoxHeader.css
@@ -6,6 +6,7 @@
     justify-content: center;
     gap: var(--space-2);
     max-height: 250px;
+    min-height: 110px;
     margin: var(--space-5);
     gap: var(--space-1);
     overflow-y: scroll;
@@ -13,6 +14,7 @@
 }
 
 .profilePicChatBoxHeader {
+
     display: flex;
     flex-direction: column;
     justify-self: center;
