--- a/TheSquatRack/src/components/chatBox/ChatBoxInput.css
+++ b/TheSquatRack/src/components/chatBox/ChatBoxInput.css
@@ -1,4 +1,5 @@
 .chatBoxInputRoot{
+
     display: grid;
     grid-template-columns: 1fr 70px;
     margin-left: var(--space-5);
@@ -6,21 +7,20 @@
 }
 
 .chatBoxInput {
+
     all: unset;
-    display: flex;
-    white-space: pre-wrap;
-    overflow-wrap: break-word;
-    word-break: break-word;
-    resize: none;
+    box-sizing: border-box;
+    white-space: nowrap;
     overflow: hidden;
+    resize: none;
+    overflow-x: scroll;
     font-size: var(--small-font-size-1);
     color: var(--color-text-bright);
     border: 1px solid var(--color-border-dark);
     border-radius: 10px;
-    padding-left: var(--space-5);
-    padding-right: var(--space-2);
     height: 60px;
     line-height: 60px;
+    padding-left: var(--space-5);
 }
 
 .chatBoxInput:active {
@@ -28,6 +28,7 @@
 }
 
 .sendChatText {
+    
     all: unset;
     display: flex;
     cursor: pointer;
