--- a/TheSquatRack/src/components/groupChatList/GroupChatList.css
+++ b/TheSquatRack/src/components/groupChatList/GroupChatList.css
@@ -17,8 +17,7 @@
     grid-template-columns: repeat(2, 1fr);
     gap: var(--space-2);
     max-height: 40vh;
-    overflow: hidden;
-    overflow-y: auto;
+    overflow-y: scroll;
     padding-bottom: var(--space-4);
     border-bottom: 1px solid var(--color-border-dark);
 }
@@ -33,6 +32,3 @@
     scrollbar-width: none;
     -ms-overflow-style: none;
 }
-
-
-
