--- a/TheSquatRack/src/Layout.css
+++ b/TheSquatRack/src/Layout.css
@@ -20,7 +20,7 @@
     grid-column: 1;
     grid-row: 2;
     border-right: 1px solid var(--color-border-dark);
-    padding: var(--space-5);
+    box-sizing: border-box;
 }
 
 .layout-main {
