--- a/TheSquatRack/src/components/groupChatList/GroupChatList.css
+++ b/TheSquatRack/src/components/groupChatList/GroupChatList.css
@@ -1,25 +1,34 @@
+.groupsRoot{
+
+    display: flex;
+    flex-direction: column;
+    width: 320px;
+    margin: auto;
+}
+
 .gcThreshold {
 
     display: flex;
     border-top: 1px solid var(--color-border-dark);
-    border-bottom: 1px solid var(--color-border-dark);
+    border-top: 1px solid var(--color-border-dark);
+    border-radius: 10px;
     padding-top: var(--space-5);
     padding-bottom: var(--space-5);
-    margin-top: var(--space-5);
+    margin-top: var(--space-2);
+    margin-bottom: var(--space-2);
     justify-content: center;
     font-size: var(--24px);
-
 }
 
 .gcListRoot {
 
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: var(--space-2);
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-5);
     max-height: 40vh;
     overflow-y: scroll;
-    padding-bottom: var(--space-4);
-    border-bottom: 1px solid var(--color-border-dark);
+    align-items: baseline;
+
 }
 
 .gcListRoot {
