--- a/TheSquatRack/src/components/userList/UserRow.css
+++ b/TheSquatRack/src/components/userList/UserRow.css
@@ -1,13 +1,15 @@
 .userRow{
+
     all: unset;
     position:relative;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     cursor: pointer;
-    width: 300px;
     border-radius: 10px;
     opacity: var(--filled);
     gap: var(--space-1);
+    margin-left: var(--space-2);
+    margin-right: var(--space-2);
 }
 
 .userRow:hover {
