--- a/TheSquatRack/src/components/groupChatList/GroupChatList.css
+++ b/TheSquatRack/src/components/groupChatList/GroupChatList.css
@@ -1,34 +1,14 @@
-.groupsRoot{
-
-    display: flex;
-    flex-direction: column;
-    width: 320px;
-    margin: auto;
-}
-
-.gcThreshold {
-
-    display: flex;
-    border-top: 1px solid var(--color-border-dark);
-    border-top: 1px solid var(--color-border-dark);
-    border-radius: 10px;
-    padding-top: var(--space-5);
-    padding-bottom: var(--space-5);
-    margin-top: var(--space-2);
-    margin-bottom: var(--space-2);
-    justify-content: center;
-    font-size: var(--24px);
-}
 
 .gcListRoot {
 
     display: flex;
     flex-direction: column;
-    gap: var(--space-5);
-    max-height: 40vh;
-    overflow-y: scroll;
+    margin-left: var(--space-5);
+    margin-right: var(--space-5);
     align-items: baseline;
-
+    overflow: hidden;
+    overflow-y: auto;
+    gap: var(--space-5);
 }
 
 .gcListRoot {
