--- a/TheSquatRack/src/components/groupChatList/GroupChatRow.css
+++ b/TheSquatRack/src/components/groupChatList/GroupChatRow.css
@@ -7,29 +7,28 @@
     cursor: pointer;
     opacity: var(--filled);
     border-radius: 10px;
-    height: 160px;
+    gap: var(--space-5);
   
 }
 
 .gcRowTitle {
 
-    justify-content: center;
-    padding: var(--space-2);
-    font-size: var(--small-font-size);
+    display: flex;
+    font-size: var(--20px);
  
 }
 
 .gcRowUserGrid {
+
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 120px;
-    max-height: 120px;
-    border: 1px solid var(--color-border-dark);
     border-radius: 10px;
-    overflow-y: scroll;
+    overflow: hidden;
+    overflow-y: auto;
     margin: auto;
-    padding: var(--space-2);
+    gap: var(--space-2);
+
 }
 
 .gcRowUserGrid:hover {
