--- a/TheSquatRack/src/components/header/ProfileIcon.css
+++ b/TheSquatRack/src/components/header/ProfileIcon.css
@@ -2,6 +2,7 @@
     all: unset;
     display: flex;
     justify-content: center;
+    align-items: center;
     grid-column: 7;
     cursor: pointer;
 }
