beginning to implement search

--- a/TheSquatRack/src/components/groupChatList/GroupChatRow.css
+++ b/TheSquatRack/src/components/groupChatList/GroupChatRow.css
@@ -32,8 +32,11 @@
 }
 
 .gcRowUserGrid:hover {
-    background-color: var(--color-hover);
-    opacity: var(--dimmed);
+
+    /* background-color: var(--color-hover);
+    opacity: var(--dimmed); */
+
 }
+
 
 
