--- a/TheSquatRack/src/components/chatBox/GroupChatBox.css
+++ b/TheSquatRack/src/components/chatBox/GroupChatBox.css
@@ -4,15 +4,14 @@
     flex-direction: column;
     align-content: center;
     position: fixed;
-    top: 180px;
-    left: 370px;
     z-index: 3;
     width: calc(700px * var(--ui-scale));
-    max-height: 80vh;
+    max-height: 70vh;
     border: 1px solid var(--color-border-dark);
-    border-radius: 10px;
     background-color: var(--color-bg);
     /* box-shadow: 0px 0px 10px 5px var(--color-shadow); */
+    margin: var(--space-4);
+    border-radius: 10px;
     opacity: 98%;
     
 }
@@ -26,8 +25,10 @@
     width: calc(1000px * var(--ui-scale));
     min-width: calc(900px * var(--ui-scale));
     margin-inline: auto;
-    max-height: 1000px;
+    max-height: 70vh;
     margin-top: calc(100px * var(--ui-scale));
     box-shadow: 0px 0px 0px 0px rgb(0, 0,0,0);
+    border: 1px solid var(--color-border-dark);
+    border-radius: 10px;
 
 }
