--- a/TheSquatRack/src/components/exerciseSelection/ExerciseSelectionRoot.css
+++ b/TheSquatRack/src/components/exerciseSelection/ExerciseSelectionRoot.css
@@ -1,9 +1,8 @@
 .exerciseSelectionRoot {
     display: flex;
     flex-direction: column;
-    position: fixed;
-    left: 340px;
-    right: 0;
+    position: absolute;
+    width: 100%;
     z-index: 2;
     min-width: calc(1000px * var(--ui-scale));
     background-color: var(--color-hover);
